Bug 778129 - GLContextProviderEGL.cpp fails to compile on mingw-w64 r=snorp